--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -139,4 +139,13 @@
         <url-pattern>/classes.web.SaveNewBenefit</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>AddReview</servlet-name>
+        <servlet-class>classes.web.AddReview</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>AddReview</servlet-name>
+        <url-pattern>/classes.web.AddReview</url-pattern>
+    </servlet-mapping>
+
 </web-app>
