--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -5,147 +5,12 @@
          version="3.1">
 
     <servlet>
-        <servlet-name>CheckUser</servlet-name>
-        <servlet-class>classes.web.CheckUser</servlet-class>
+        <servlet-name>BaseServletController</servlet-name>
+        <servlet-class>classes.web.BaseServletController</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>CheckUser</servlet-name>
-        <url-pattern>/classes.web.CheckUser</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>Registration</servlet-name>
-        <servlet-class>classes.web.Registration</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>Registration</servlet-name>
-        <url-pattern>/classes.web.Registration</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>AddUser</servlet-name>
-        <servlet-class>classes.web.AddUser</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>AddUser</servlet-name>
-        <url-pattern>/classes.web.AddUser</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>FindFilm</servlet-name>
-        <servlet-class>classes.web.FindFilm</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>FindFilm</servlet-name>
-        <url-pattern>/classes.web.FindFilm</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>SeeBooking</servlet-name>
-        <servlet-class>classes.web.SeeBooking</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>SeeBooking</servlet-name>
-        <url-pattern>/classes.web.SeeBooking</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>MyProfile</servlet-name>
-        <servlet-class>classes.web.MyProfile</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>MyProfile</servlet-name>
-        <url-pattern>/classes.web.MyProfile</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>SeeReviews</servlet-name>
-        <servlet-class>classes.web.SeeReviews</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>SeeReviews</servlet-name>
-        <url-pattern>/classes.web.SeeReviews</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>AllMovies</servlet-name>
-        <servlet-class>classes.web.AllMovies</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>AllMovies</servlet-name>
-        <url-pattern>/classes.web.AllMovies</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>AdminAddUser</servlet-name>
-        <servlet-class>classes.web.AdminAddUser</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>AdminAddUser</servlet-name>
-        <url-pattern>/classes.web.AdminAddUser</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>AddMovie</servlet-name>
-        <servlet-class>classes.web.AddMovie</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>AddMovie</servlet-name>
-        <url-pattern>/classes.web.AddMovie</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>SeeAllUsers</servlet-name>
-        <servlet-class>classes.web.SeeAllUsers</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>SeeAllUsers</servlet-name>
-        <url-pattern>/classes.web.SeeAllUsers</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>BenefitSystem</servlet-name>
-        <servlet-class>classes.web.BenefitSystem</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>BenefitSystem</servlet-name>
-        <url-pattern>/classes.web.BenefitSystem</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>DeleteBenefit</servlet-name>
-        <servlet-class>classes.web.DeleteBenefit</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>DeleteBenefit</servlet-name>
-        <url-pattern>/classes.web.DeleteBenefit</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>AddBenefit</servlet-name>
-        <servlet-class>classes.web.AddBenefit</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>AddBenefit</servlet-name>
-        <url-pattern>/classes.web.AddBenefit</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>SaveNewBenefit</servlet-name>
-        <servlet-class>classes.web.SaveNewBenefit</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>SaveNewBenefit</servlet-name>
-        <url-pattern>/classes.web.SaveNewBenefit</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>AddReview</servlet-name>
-        <servlet-class>classes.web.AddReview</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>AddReview</servlet-name>
-        <url-pattern>/classes.web.AddReview</url-pattern>
+        <servlet-name>BaseServletController</servlet-name>
+        <url-pattern>/classes.web.BaseServletController</url-pattern>
     </servlet-mapping>
 
 </web-app>
